--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body{
     background-color: #000;
     color: #fff;
+    font-family: 'Nunito', sans-serif;
 }
 
 .text{
@@ -18,6 +19,11 @@ body{
 
 h1{
     margin-right: 1em;
+}
+
+p{
+    font-size: 1.5em;
+    font-family: 'Dancing Script', cursive;
 }
 
 .typed-text{
